<resources>
    <string name="app_name">Koda</string>
    <string name="now_playing_channel_name">Now playing</string>
    <string name="video_playback_channel_name">Video playback</string>
    <string name="notification_repeat_off">Repeat off</string>
    <string name="notification_repeat_all">Repeat all</string>
    <string name="notification_repeat_one">Repeat one</string>
    <string name="notification_like">Like</string>
    <string name="notification_unlike">Remove like</string>
    <string name="widget_tap_to_listen">Tap to listen</string>
    <string name="widget_pulse_label">Pulse</string>
    <string name="widget_pulse_description">Cover, track and play; add a row for progress and skip</string>
    <string name="widget_console_label">Console</string>
    <string name="widget_console_description">Just the controls, with shuffle and repeat</string>
    <string name="widget_deck_label">Deck</string>
    <string name="widget_deck_description">A tall player with cover, progress and every control</string>
    <string name="widget_lineup_label">Lineup</string>
    <string name="widget_lineup_description">What is playing and what is next; tap a track to jump</string>
    <string name="widget_bloom_label">Bloom</string>
    <string name="widget_bloom_description">Album art as a scalloped tile on your wallpaper, with play and next</string>
    <string name="widget_orbit_label">Orbit</string>
    <string name="widget_orbit_description">A round cover in a single cell</string>
    <string name="widget_vinyl_label">Vinyl</string>
    <string name="widget_vinyl_description">A record sliding out of its sleeve, turning while your music plays</string>
    <string name="widget_pixel_label">Pixel</string>
    <string name="widget_pixel_description">A pixel-art turntable that spins while your music plays</string>
    <string name="widget_action_open_app">Open Koda</string>
    <string name="widget_action_play">Play</string>
    <string name="widget_action_pause">Pause</string>
    <string name="widget_action_next">Next</string>
    <string name="widget_action_previous">Previous</string>
    <string name="widget_action_shuffle">Shuffle</string>
    <string name="widget_action_repeat">Repeat</string>
    <string name="widget_action_repeat_one">Repeat one</string>
    <string name="widget_action_repeat_all">Repeat all</string>
    <string name="widget_nothing_up_next">Nothing up next</string>
    <string name="widget_preview_title">Midnight Drive</string>
    <string name="widget_preview_artist">Neon Coast</string>
    <string name="widget_preview_next_1">Glasshouse</string>
    <string name="widget_preview_next_2">Ultraviolet</string>
    <string name="upload_check_channel_name">New uploads</string>
    <string name="upload_check_channel_description">Tells you when a channel you follow uploads</string>
    <string name="upload_notification_title">%1$s: %2$d new uploads</string>
    <string name="undo">Undo</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_done">Done</string>
    <string name="action_create">Create</string>
    <string name="action_save">Save</string>
    <string name="action_listen_as_music">Music</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_share">Share</string>
    <string name="action_retry">Retry</string>
    <string name="video_cached_portion_ended">You reached the end of the cached video. Reconnect to continue.</string>
    <string name="video_not_cached_offline">This part of the video is not cached. Reconnect to continue.</string>
    <string name="action_see_all">See all</string>
    <string name="action_play_all">Play all</string>
    <string name="action_show_more">Show More</string>
    <string name="action_try_again">Try again</string>
    <string name="action_open_settings">Open Settings</string>
    <string name="action_clear_all">Clear all</string>
    <string name="action_new_playlist">New playlist</string>
    <string name="action_grant_permission">Grant Permission</string>
    <string name="action_close">Close</string>
    <string name="action_check_updates">Check Updates</string>
    <string name="action_got_it">Got it</string>
    <string name="action_like">Like</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="untitled_song">Untitled Song</string>
    <string name="label_playlist">Playlist</string>
    <string name="tab_home">Home</string>
    <string name="tab_search">Search</string>
    <string name="tab_subs">Subs</string>
    <string name="tab_library">Library</string>
    <string name="local_only_title">Local only mode is on</string>
    <string name="local_only_default_subtitle">This section needs the internet. Turn off Local only in Settings to use it.</string>
    <string name="local_only_video_mode_subtitle">Video mode needs the internet. Turn off Local only in Settings to watch videos.</string>
    <string name="local_only_video_search_subtitle">Video search needs the internet. Turn off Local only in Settings to search videos.</string>
    <string name="local_only_subscriptions_subtitle">Subscriptions need the internet. Turn off Local only in Settings to see them.</string>
    <string name="local_only_video_library_subtitle">The video library needs the internet. Turn off Local only in Settings to see it.</string>
    <string name="local_only_update_subtitle">Update checks need the internet. Turn off Local only in Settings to check for updates.</string>
    <string name="crash_dialog_title">Koda crashed last time</string>
    <string name="crash_dialog_message">Something went wrong on your previous session. You can send a bug report with the details - nothing leaves your device unless you choose to share it.</string>
    <string name="crash_dialog_view_report">View &amp; report</string>
    <string name="crash_dialog_not_now">Not now</string>
    <string name="permission_required_title">Permission required to load songs</string>
    <string name="home_section_recent_albums">Recent Albums</string>
    <string name="home_section_jump_back_in">Jump back in</string>
    <string name="home_section_top_artists">Your top artists</string>
    <string name="home_section_mixes">Mixes for you</string>
    <string name="home_offline_subtitle">You\'re offline. These play without a connection.</string>
    <string name="your_mix_line1">Your</string>
    <string name="your_mix_line2">Mix</string>
    <string name="home_mix_up_next">Up next in your mix</string>
    <string name="update_badge_version">v%1$s</string>
    <string name="artists_joined">%1$s, %2$s</string>
    <string name="cd_profile">Profile</string>
    <string name="cd_downloads">Downloads</string>
    <string name="cd_settings">Settings</string>
    <string name="cd_play">Play</string>
    <string name="cd_pause">Pause</string>
    <string name="cd_next">Next</string>
    <string name="cd_album_art">Album Art</string>
    <string name="cd_show_all">Show all %1$s</string>
    <string name="spotlight_quick_picks">Quick picks</string>
    <string name="spotlight_new_for_you">New for you</string>
    <string name="spotlight_new_for_you_caption">Songs you have not played, from artists you do</string>
    <string name="spotlight_discovery_empty">Nothing new to suggest yet</string>
    <string name="spotlight_discovery_empty_sub">Play and like a few more songs and this fills up.</string>
    <string name="action_refresh">Refresh</string>
    <string name="spotlight_albums_to_explore">Albums to explore</string>
    <string name="spotlight_albums_to_explore_sub">Full records from the artists you play</string>
    <string name="spotlight_playlists_to_try">Playlists to try</string>
    <string name="spotlight_playlists_to_try_sub">Collections built around what you listen to</string>
    <string name="spotlight_artists_for_you">Artists you might like</string>
    <string name="spotlight_artists_for_you_sub">Not in your library yet</string>
    <string name="spotlight_your_playlists">Your playlists</string>
    <string name="spotlight_from_your_library">From your library</string>
    <string name="spotlight_caption_liked">From songs you liked</string>
    <string name="spotlight_caption_recent">From what you played lately</string>
    <string name="shortcut_liked_songs">Liked songs</string>
    <string name="filter_all">All</string>
    <string name="filter_recommended">For you</string>
    <string name="filter_liked">Liked</string>
    <string name="filter_recent">Recent</string>
    <string name="filter_playlists">Playlists</string>
    <string name="spotlight_empty_no_liked">No liked songs yet</string>
    <string name="spotlight_empty_no_recent">Nothing played yet</string>
    <string name="spotlight_empty_no_playlists">No playlists yet</string>
    <string name="spotlight_empty_generic">Nothing to show yet</string>
    <string name="spotlight_hint_liked">Songs you like will collect here.</string>
    <string name="spotlight_hint_playlists">Playlists you make or save show up here.</string>
    <string name="spotlight_hint_all">Play something and your home fills in around it.</string>
    <string name="sleep_timer_title">Sleep timer</string>
    <string name="sleep_timer_off">Off</string>
    <string name="sleep_timer_status_track">This track</string>
    <string name="sleep_timer_detail_track">Playback stops when the song playing now finishes</string>
    <string name="sleep_timer_detail_duration">Playback fades out and pauses when the timer ends</string>
    <string name="minutes_short">%1$d min</string>
    <string name="sleep_timer_end_of_track">End of this track</string>
    <string name="sleep_timer_end_of_video">End of this video</string>
    <string name="sleep_timer_status_video">This video</string>
    <string name="sleep_timer_detail_video">Playback stops when the video playing now ends</string>
    <string name="sleep_timer_detail_duration_video">Playback pauses when the timer ends</string>
    <string name="sleep_timer_turn_off">Turn off</string>
    <string name="cd_switch_to_music">Switch to music mode</string>
    <string name="cd_switch_to_video">Switch to video mode</string>
    <string name="cd_drag_to_reorder">Drag to reorder</string>
    <string name="cd_favorite">Favorite</string>
    <string name="cd_clear_search">Clear search</string>
    <string name="queue_removed_snackbar">Removed %1$s</string>
    <string name="song_options_play_next">Play next</string>
    <string name="song_options_play_next_subtitle">Right after this song</string>
    <string name="song_options_add_to_queue">Add to queue</string>
    <string name="song_options_add_to_queue_subtitle">At the end</string>
    <string name="song_options_add_to_playlist">Add to playlist</string>
    <string name="song_options_remove_from_liked">Remove from liked</string>
    <string name="song_options_like">Like</string>
    <string name="song_options_download">Download</string>
    <string name="song_options_download_subtitle">Keep on this device</string>
    <string name="song_options_downloaded">Downloaded</string>
    <string name="song_options_go_to_artist">Go to %1$s</string>
    <string name="song_options_not_interested">Not interested</string>
    <string name="song_options_not_interested_subtitle">Stop recommending this song</string>
    <string name="music_failed_skipped">Couldn\'t play %1$s. Skipped to the next song.</string>
    <string name="music_failed_stopped">Couldn\'t play %1$s.</string>
    <string name="music_failed_refused">YouTube is refusing playback on this network right now. Try again in a few minutes.</string>
    <string name="music_failed_untitled">this song</string>
    <string name="song_options_block_artist">Don\'t recommend %1$s</string>
    <string name="song_options_speed">Playback speed</string>
    <string name="song_options_speed_value">%1$d%%</string>
    <string name="song_options_speed_normal">Normal speed</string>
</resources>